--- a/_config.yml
+++ b/_config.yml
@@ -15,14 +15,14 @@ minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "en-US"
-title                    : "maha's blog"
+title                    : "JinjuCat's blog"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "maha"
-description              : "systems hacking"
-url                      : "https://mahamaryam.github.io" # the base hostname & protocol for your site e.g. "https://zolutal.github.io"
+name                     : "Jinju Cat"
+description              : ""
+url                      : "https://jinjucat.github.io" # the base hostname & protocol for your site e.g. "https://zolutal.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : mahamaryam/mahamaryam.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : mahamaryam/jinjucat.github.io # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 breadcrumbs              : true # true, false (default)
@@ -37,9 +37,9 @@ atom_feed:
 
 # Site Author
 author:
-  name             : "Chocolate Cake"
+  name             : "Jinju Cat"
   avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "systems hacking"
+  bio              : ""
   email            :
   links:
     - label: "Email"
@@ -50,7 +50,7 @@ author:
       # url: "https://mahamaryam.github.io"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/mahamaryam"
+      url: "https://github.com/jinjucat"
     
 
 # Site Footer
@@ -58,7 +58,7 @@ footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: https://github.com/mahamaryam
+      url: https://github.com/jinjucat
     
 
 
